--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^5.2.6",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.12",
+    "aos": "^2.3.4",
     "astro": "^5.13.4",
     "tailwind": "^2.3.1",
     "tailwindcss": "^4.1.12",
