--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.2.8",
     "@fontsource/orbitron": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/vite": "^4.1.12",
     "aos": "^2.3.4",
     "astro": "^5.13.4",
+    "resend": "^6.1.2",
     "tailwind": "^2.3.1",
     "tailwindcss": "^4.1.12",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "toastify-js": "^1.12.0"
   }
 }
